--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,83 @@
 .App {
-  text-align: center;
+  text-align: left;
+  padding: 50px;
+}
+.a-block {
+  padding: 20px;
+  max-width: 400px;
+  border-radius: 10px;
+  margin: 10px;
+  font-weight: 900;
+  position: relative;
+}
+.h-out-line {
+  height: 10px;
+  width: 100px;
+  display: inline-block;
+  background-color: #8BD8BD;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+}
+.h-out-line-connector {
+  height: 10px;
+  display: inline-block;
+  background-color: #8BD8BD;
+  position: absolute;
+  left: 100%;
+}
+.h-out-line-connector:before {
+  content: "";
+    height: 10px;
+    width: 10px;
+    display: inline-block;
+    background-color: transparent;
+    position: absolute;
+    left: -4px;
+    top: -3px;
+    transform: rotate(45deg);
+    border-left: 5px solid #8BD8BD;
+    border-bottom: 5px solid #8BD8BD;
+}
+.v-out-line {
+    width: 10px;
+    display: inline-block;
+    /* background-color: #8BD8BD; */
+    position: absolute;
+    top: 50%;
+    border-radius: 0px 10px 10px 0;
+    border: solid 5px #8BD8BD;
+    border-left: none;
+    pointer-event: none;
+}
+.v-out-line:before {
+  content: "";
+  height: 10px;
+  width: 10px;
+  display: inline-block;
+  background-color: transparent;
+  position: absolute;
+  left: -4px;
+  bottom: -10px;
+  transform: rotate(45deg);
+  border-left: 5px solid #8BD8BD;
+  border-bottom: 5px solid #8BD8BD;
+}
+.call-comp {
+  color: blue;
+  font-weight: 900;
+}
+.desc-line {
+  color: #aaa;
+}
+.a-line {
+  font-weight: 500;
+    font-style: italic;
+    color: red;
+    padding: 2px 15px;
+    position: relative;
+    margin: 20px 5px;
+    cursor: pointer;
 }
 
 .App-logo {
